--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,13 @@
 #text_carousel{
     z-index: 1;
 }
+.card-img-top{
+    position: relative;
+    left: 30%;
+    width: 40%;
+}
 .card{
     height: 100%;
-}
-.card img{
-    text-align: center;
 }
 
 @media only screen and (max-width:991px){
@@ -26,6 +28,7 @@
         border: none;
     }
     #text_carousel p{
+        display: none;
         font-size: 12px;
     }
     #text_carousel h1{
