--- a/css/style.css
+++ b/css/style.css
@@ -1,143 +1,126 @@
-#logo{
-    width: 90px;
-    filter: invert();
-}
-#header_bg{
-    background: linear-gradient(rgba(0, 0, 0, 6), rgba(0, 0, 0, 0.5)),url(../assest/img/fondo-header.jpg);
-}
-#navbarNav ul li:not(:first-child){
-    border-left: 2px solid white;
-}
+#logo {
+  width: 90px; }
 
-#navbarNav a{
-    border-radius: 10px;
-    transition: all 0.5s;
-    padding-left: 5px;
-}
-#navbarNav a:hover{
+#header_bg {
+  background: linear-gradient(black, rgba(0, 0, 0, 0.5)), url(../assest/img/fondo-header.jpg); }
+
+#navbarNav ul li:not(:first-child) {
+  border-left: 2px solid white; }
+
+#navbarNav a {
+  border-radius: 10px;
+  transition: all 0.5s;
+  padding-left: 5px; }
+  #navbarNav a:hover {
     color: black !important;
     border-radius: 10px;
     background-color: white;
     transition: all 0.5s;
-    transform: translateX(8px);
+    transform: translateX(8px); }
 
-}
-.carousel-inner{
-    filter:brightness(0.4);
-}
-#text_carousel{
-    z-index: 1;
-    font-size: 20px;
-}
-.card-img-top{
-    position: relative;
-    left: 30%;
-    width: 40%;
-    padding-top: 15px;
-}
-.card{
-    height: 100%;
-}
-.container__imgFinal{
-    display: grid;
-    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),url(../assest/img/mecanica_industrial.jpg);
-    background-size: cover;
-    background-position:top;
-    min-height: 450px;
+.carousel-inner {
+  filter: brightness(0.4); }
 
-}
+#text_carousel {
+  z-index: 1;
+  font-size: 20px; }
 
-.container__imgFinal p{
+.card-img-top {
+  position: relative;
+  left: 30%;
+  width: 40%;
+  padding-top: 15px; }
+
+.card {
+  height: 100%; }
+
+.container__imgFinal {
+  display: grid;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../assest/img/mecanica_industrial.jpg);
+  background-size: cover;
+  background-position: top;
+  min-height: 450px; }
+  .container__imgFinal p {
     margin: 0;
     color: white;
     text-align: center;
-    font-size: 20px;
-}
-.textFinal{
-    display: grid;
-    align-content: center;
-    justify-content: center;
-}
-footer{
-    display: flex;
-    flex-wrap: wrap;
-}
-footer img{
+    font-size: 20px; }
+
+.textFinal {
+  display: grid;
+  align-content: center;
+  justify-content: center; }
+
+footer {
+  display: flex;
+  flex-wrap: wrap; }
+  footer img {
     width: 5%;
-    padding: 10px;
-}
-#services{
-    display: flex;
-    box-shadow:  1px 0px 10px ;
-    margin: 20px;
-    padding: 10px;
-    border-radius: 10px;
-    width: 600px;
+    padding: 10px; }
 
-}
-#contenedor--service{
-    display: flex;
-    flex-wrap: wrap;
-}
+#services {
+  display: flex;
+  box-shadow: 1px 0px 10px;
+  margin: 20px;
+  padding: 10px;
+  border-radius: 10px;
+  width: 600px; }
 
-#footer--navmenu li{
+#contenedor--service {
+  display: flex;
+  flex-wrap: wrap; }
+
+#footer--navmenu {
+  border-left: 2px solid rgba(0, 0, 0, 0.271); }
+  #footer--navmenu li {
     list-style-type: none;
-    padding: 10px;
-}
-#footer--navmenu a{
+    padding: 10px; }
+  #footer--navmenu a {
+    transition: all 0.5s;
     color: black;
-    text-decoration: 1px blue underline;
-}
-#footer--navmenu{
-    border-left: 3px solid rgba(0, 0, 0, 0.271);
+    text-decoration: none;
+    padding-left: 200px;
+    padding-right: 200px;
+    border-radius: 10px; }
+    #footer--navmenu a:hover {
+      border-radius: 10px;
+      color: white;
+      background-color: black;
+      transition: all 0.5s; }
 
-}
-.grid{
-    display: grid;
-    grid-template-areas: "vision mision"
-                        "valores mision";
+.grid {
+  display: grid;
+  grid-template-areas: "vision mision" "valores mision"; }
 
-}
-.mision{
-    grid-area: mision;
-}
-.valores{
-    grid-area: valores;
-}
-.vision{
-    grid-area: vision;
-}
+.mision {
+  grid-area: mision; }
 
+.valores {
+  grid-area: valores; }
 
+.vision {
+  grid-area: vision; }
 
-
-@media only screen and (max-width:991px){
-    #navbarNav ul li:not(:first-child){
-        border: none;
-    }
-    #text_carousel p{
-        font-size: 16px;
-    }
-    #text_carousel h1{
-        font-size: 19px;
-    }
-    .textFinal p{
-        font-size: 15px;
-    }
-    footer img{
-        width: 15%;
-        padding: 10px;
-    }
-    .carousel-inner .carousel-item img{
-        height: 400px;
-    }
-    #footer--navmenu{
-        border-top: 3px solid black;
-        border-left: none;
-    }
-    .grid{
-        display: flex;
-        flex-wrap: wrap;
-    }
-}
-
+@media only screen and (max-width: 991px) {
+  #navbarNav ul li:not(:first-child) {
+    border: none; }
+  #text_carousel p {
+    font-size: 15px; }
+  #text_carousel h1 {
+    font-size: 15px; }
+  .textFinal p {
+    font-size: 15px; }
+  footer img {
+    width: 15%;
+    padding: 10px; }
+  .carousel-inner .carousel-item img {
+    height: 400px; }
+  #footer--navmenu {
+    border-top: 3px solid black;
+    border-left: none; }
+    #footer--navmenu a {
+      padding-left: 100px;
+      padding-right: 100px; }
+  .grid {
+    display: flex;
+    flex-wrap: wrap; } }
