--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,36 @@ footer {
 .mt-5 {
   margin-top: 50px; }
 
+.mb-1 {
+  margin-bottom: 10px; }
+
+.mb-2 {
+  margin-bottom: 20px; }
+
+.mb-3 {
+  margin-bottom: 30px; }
+
+.mb-4 {
+  margin-bottom: 40px; }
+
+.mb-5 {
+  margin-bottom: 50px; }
+
+.p-1 {
+  padding: 10px; }
+
+.p-2 {
+  padding: 20px; }
+
+.p-3 {
+  padding: 30px; }
+
+.p-4 {
+  padding: 40px; }
+
+.p-5 {
+  padding: 50px; }
+
 .grid {
   display: grid;
   grid-template-areas: "vision mision" "valores mision"; }
@@ -165,3 +195,15 @@ footer {
   .grid {
     display: flex;
     flex-wrap: wrap; } }
+
+.container__form {
+  background-color: rgba(236, 234, 234, 0.867);
+  border-radius: 20px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 auto;
+  width: 80%;
+  flex-wrap: wrap; }
+  .container__form form input {
+    width: 280px; }
